# cxx_frame

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: ClangTidy.cmake  Coverage.cmake  Doxygen.cmake  Install.cmake  Utils.cmake
src/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
